--- a/ba-w2v-v1/.gitattributes
+++ b/ba-w2v-v1/.gitattributes
@@ -1,2 +1,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+dataForModel.zip filter=lfs diff=lfs merge=lfs -text
+fullTextContent.zip filter=lfs diff=lfs merge=lfs -text
