--- a/elastic/package.json
+++ b/elastic/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bodybuilder": "^2.2.17",
     "dotenv": "^8.0.0",
     "elasticsearch": "^16.1.1",
     "express": "^4.17.1"
